# Algorithms

./: .claude.md  .gemini.md  .gitignore  .project  .travis.yml  B tree algo  BUILD.bazel  CLAUDE.md  CODE_OF_CONDUCT.md  ChineseRemainderTheorem.java  Combinations.java  CombinationsWithRepitition.java  CompressedPrimeSieve.java  CountingSort.java  EulerTotientFunction.java  ExtendedEuclideanAlgorithm.java  FastFourierTransform.java  Instructions.md  IntQueue.java  InterpolationSearch.java  IsPrime.java  LCM.java  LICENSE  LinkedList.c  MODULE.bazel  Permutation.java  PrimeFactorization.java  README.md  README_original.md  SieveOfEratosthenes.java  SuffixArray.java  Tarjan.java  TernarySearch.java  TernarySearchDiscrete.java  WORKSPACE.bazel  build.gradle  circular_LL.c  gradle.properties  jacoco.gradle  polynomial-solver.c  (+4 more)
.claude/: SKILL.md
.gemini/: SKILL.md
.github/: dependabot.yml
.metadata/: version.ini
AI/: GeneticAlgorithm_knapsack_01.java  GeneticAlgorithm_textSearch.java  GeneticAlgorithm_travelingSalesman.java  GeneticAlgorithm_travellingSalesman.java
ConstructiveAlgorithms/: Combinations.java  CombinationsWithRepetition.java  CombinationsWithRepitition.java  Permutations.java  PowerSet.java  UniqueCombinations.java
DynamicProgramming/: CoinChange.java  EditDistance.java  JosephusProblem.java  Knapsack_01.java  LongestCommonSubsequence.java  LongestIncreasingSubsequence.java  LongestPalindromeSubsequence.java  MaximumSubarray.java  TravelingSalesmanProblemDynamicProgramming.java  [UNFINISHED]TravelingSalesmanProblemDynamicProgramming.java
(+1291 files in other folders)
