module(
    name = "algorithms",
    version = "1.0.0",
)

# Java rules dependency - required for java_library, java_binary, etc.
bazel_dep(name = "rules_java", version = "9.3.0")

# Maven dependency management - for JUnit, Guava, etc.
bazel_dep(name = "rules_jvm_external", version = "6.7")

# Configure Maven dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # JUnit 5 / Jupiter
        "org.junit.jupiter:junit-jupiter:5.10.0",
        "org.junit.jupiter:junit-jupiter-engine:5.10.0",
        "org.junit.platform:junit-platform-launcher:1.10.0",
        "org.junit.platform:junit-platform-console:1.10.0",

        # Apache Commons Lang
        "org.apache.commons:commons-lang3:3.17.0",

        # Google Guava
        "com.google.guava:guava:33.4.0-jre",

        # Google Truth test framework
        "com.google.truth:truth:1.1.5",

        # Mockito test framework
        "org.mockito:mockito-core:5.14.2",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    lock_file = "//:rules_jvm_external++maven+maven_install.json",
)
use_repo(maven, "maven")
